# smart-ingredients

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TECH-STACK.md  Trunk.toml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  tailwind.config.cjs
backend/: Cargo.toml  Dockerfile  rules.json
backend/migrations/: 001_create_analyses.sql  002_add_ocr_llm_status.sql  003_create_users.sql  004_add_user_id_to_analyses.sql  005_add_username_password.sql  006_drop_phone_columns.sql  007_create_rules.sql  008_create_community_posts.sql
backend/src/: config.rs  db.rs  errors.rs  lib.rs  main.rs  middleware.rs  routes.rs  state.rs
backend/src/handlers/: analysis.rs  auth.rs  community.rs  mod.rs  users.rs
backend/src/services/: auth.rs  community.rs  image_converter.rs  llm.rs  llm_deepseek.rs  mod.rs  ocr.rs  ocr_preprocess.rs  rules.rs  storage.rs
demo-email-login/: README.md  config.example.json  index.html  server.py
docs/: .init-summary.md  PROJECT-STATUS.md  README.md  TODO.md
docs/analysis/: project-analysis.md
docs/api/: api-reference.md
docs/deployment/: server-deploy.md
docs/design/: 002-mvp-backend-technical-plan.md  006-interaction-optimization-technical-plan.md  007-figma-ui-redesign-technical-plan.md  008-android-layout-fix-technical-plan.md  009-image-upload-format-support-technical-plan.md  010-remove-tesseract-ocr-technical-plan.md  011-personalized-analysis-technical-plan.md  012-user-system-technical-plan.md  013-tab-navigation-technical-plan.md  014-local-history-storage-technical-plan.md  015-thumbnail-loading-technical-plan.md  016-server-stability-observability-technical-plan.md  017-mobile-ui-refinement-technical-plan.md  018-username-password-login-technical-plan.md  019-rule-based-analysis-technical-plan.md  020-export-share-image-technical-plan.md  020-ocr-ux-guardrails-technical-plan.md  021-rule-confidence-ux-technical-plan.md  022-rules-db-storage-technical-plan.md  023-ui-ux-presentation-technical-plan.md  024-preference-interaction-technical-plan.md  025-community-share-technical-plan.md  025-miniapp-devtools-config-technical-plan.md  026-tauri-build-script-technical-plan.md  026-warning-cleanup-technical-plan.md  027-community-tab-nav-fix-technical-plan.md  028-remove-result-page-technical-plan.md  029-figma-style-unification-technical-plan.md  030-ocr-empty-result-technical-plan.md  031-ui-guidelines-fixes-technical-plan.md  032-capture-page-ux-fixes-technical-plan.md  033-frontend-tailwind-migration-phase1-technical-plan.md  034-bottom-nav-cross-platform-alignment-technical-plan.md  035-miniapp-devtools-renderer-stability-technical-plan.md  figma-design-system.md  implementation-plan.md  routing.md  technical-design.md  ui-design.md
docs/plans/: 2026-02-16-preference-interaction.md  2026-02-19-community-share-design.md  2026-02-19-community-share-implementation.md  2026-02-19-community-share-ui-fixes.md  2026-02-20-ui-premium-minimal-design.md  2026-02-20-ui-premium-minimal-implementation-plan.md  2026-02-20-warning-cleanup.md  2026-02-21-figma-style-unification-plan.md  2026-02-21-ocr-empty-result-implementation-plan.md  2026-02-21-tauri-build-script-plan.md  2026-02-22-ui-guidelines-fixes-design.md  2026-02-22-ui-guidelines-fixes.md  2026-02-25-capture-page-ux-fixes.md
docs/requirements/: 001-mobile-ui-requirements.md  001-mobile-ui-technical-plan.md  002-mvp-backend-requirements.md  003-api-automation-testing-requirements.md  003-ocr-quality-requirements.md  003-ocr-quality-technical-plan.md  004-ingredient-table-integration-requirements.md  004-ingredient-table-integration-technical-plan.md  005-ui-optimization-requirements.md  005-ui-optimization-technical-plan.md  006-interaction-optimization-requirements.md  007-figma-ui-redesign-requirements.md  008-android-layout-fix-requirements.md  009-image-upload-format-support-requirements.md  010-remove-tesseract-ocr-requirements.md  011-personalized-analysis-requirements.md  012-user-system-requirements.md  013-tab-navigation-and-onboarding-requirements.md  014-local-history-storage-requirements.md  015-history-thumbnail-requirements.md  016-server-stability-observability-requirements.md  017-mobile-ui-refinement-requirements.md  018-username-password-login-requirements.md  (+21 more)
frontend/: Cargo.toml  build.rs  index.html
frontend/src/: lib.rs  main.rs
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: bottom_nav.rs  community_share_button.rs  confirm_modal.rs  error_display.rs  example_images.rs  export_preview_modal.rs  health_score_card.rs  icons.rs  image_preview.rs  ingredient_card.rs  ingredient_card_list.rs  ingredient_table.rs  loading_spinner.rs  main_layout.rs  mod.rs  preference_selector.rs  risk_badge.rs  share_button.rs  summary_card.rs  tab_icons.rs  toast.rs  usage_tips.rs
frontend/src/pages/: analyzing.rs  capture.rs  community.rs  community_detail.rs  confirm.rs  detail.rs  history.rs  login.rs  mod.rs  ocr.rs  onboarding.rs  preference.rs  profile.rs  register.rs  result.rs  summary.rs
frontend/src/services/: mod.rs
frontend/src/stores/: mod.rs
frontend/src/styles/: app.css  bottom-nav.css
frontend/src/types/: mod.rs
frontend/src/utils/: auth_storage.rs  community_share.rs  community_share_storage.rs  community_ui.rs  error_messages.rs  export_image.rs  local_history.rs  local_storage.rs  mod.rs  navigation.rs  preference.rs  presentation.rs
miniapp/: .gitignore  babel.config.js  package-lock.json  package.json  project.config.json  project.private.config.json
ocr_service/: Dockerfile  app.py  ocr_utils.py  requirements.txt
scripts/: build-android.sh  deploy-to-server.sh  generate-android-keystore.sh  mock_llm.py  open-miniapp-devtools.sh  seed_user_history.sql  update-android-network-config.sh
(+64 files in other folders)
