[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
async-trait = "0.1"
opencv = { version = "0.92", default-features = false, features = ["imgcodecs", "imgproc"] }

# Backend specific
axum = { workspace = true, features = ["multipart"] }
sqlx.workspace = true
redis.workspace = true

# Shared types
shared = { path = "../shared" }

# Additional dependencies
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
dotenvy = "0.15"

[dev-dependencies]
tower-test = "0.4"
