[package]
name = "backend"
version.workspace = true
edition.workspace = true

[features]
# Default to a lighter build that matches the current deployment config
# (OCR handled by the separate Paddle service).
default = ["paddle"]
paddle = []
# Enable HEIC/HEIF decoding (requires libheif at build/runtime).
heic = ["dep:libheif-rs"]
# Convenience feature for enabling everything.
full = ["paddle", "heic"]

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
async-trait = "0.1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "bmp", "gif", "tiff"] }
bytes = "1"
libheif-rs = { version = "0.22", optional = true }
resvg = "0.44"
aes-gcm = "0.10"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
jsonwebtoken = "9"
rand = "0.8"

# Backend specific
axum = { workspace = true, features = ["multipart"] }
sqlx.workspace = true
redis.workspace = true

# Shared types
shared = { path = "../shared" }

# Additional dependencies
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "fs"] }
dotenvy = "0.15"

[dev-dependencies]
tower-test = "0.4"
