[package]
name = "smart-ingredients-app"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["CustomEvent", "CustomEventInit", "Event", "EventTarget", "File", "FileList", "FormData", "Headers", "HtmlInputElement", "Request", "RequestInit", "RequestMode", "Response", "Window"] }

# Frontend specific
leptos.workspace = true
leptos-use.workspace = true

# Shared types
shared = { path = "../shared" }

# Additional dependencies
leptos_router = "0.7"
image = "0.25"
base64 = "0.22"
gloo-timers = { version = "0.3", features = ["futures"] }

[features]
default = []
